# minions

./: .editorconfig  .gitignore  Makefile.am  README.md  configure.ac  icon.theme  index.theme  test-minions.yml
cursor/: index.theme
cursor/cursors/: dnd-ask  dnd-copy  dnd-move  left_ptr  link  right_ptr  watch
gtk-2.0/: gtkrc
gtk-3.0/: _colors.scss  _common.scss  gtk-contained-dark.css  gtk-contained.css  gtk.gresource  test.txt
src/: watch.xcf
